syntax = "proto3";

package convergedcomputing.org.grpc.v1;
option go_package = "github.com/converged-computing/ensemble-python/protos";

service EnsembleOperator {
    rpc RequestStatus(StatusRequest) returns (Response);
    rpc RequestAction(ActionRequest) returns (Response);
}

// StatusRequest asks to see the status of the ensemble
// as seen by the operator
message StatusRequest {

    // This is the ensemble member type (e.g., minicluster)
    string member = 1;
    string namespace = 2;
}

// ActionRequest requests an action
message ActionRequest {
    string member = 1;
    string namespace = 2;
    string action = 3;
    string payload = 4;
}

message Response {

    // Registration statuses
    enum ResultType {
      UNSPECIFIED = 0;
      SUCCESS = 1;
      ERROR = 2;
      DENIED = 3;
      EXISTS = 4;
    }
    string payload = 1;
    ResultType status = 4;
}
